--- a/src/styles/includes/_mixins.scss
+++ b/src/styles/includes/_mixins.scss
@@ -1,5 +1,5 @@
 $background-color-default: #111111 !default;
-$background-color-hover: $purple !default;
+$background-color-hover: $royal-purple !default;
 $text-color: #e5e5e5 !default;
 
 @mixin create-theme($name, $background-color-default, $background-color-hover, $text-color) {
