--- a/src/styles/includes/_variables.scss
+++ b/src/styles/includes/_variables.scss
@@ -3,3 +3,4 @@ $mine-shaft: #333333;
 $scorpion: #595959;
 $silver: #c5c5c5;
 $wild-sand: #f5f5f5;
+$royal-purple: #663399;
